Removed comment from copy & retitled page

--- a/preferences.html
+++ b/preferences.html
@@ -1,24 +1,13 @@
 
 <!DOCTYPE HTML>
 
-<!--
-    How to use:
-
-    On each page, copy:
-        In head:
-            - The link element for the CSS
-            - The script element for the search bar script
-        In body:
-            - Everything that's between the comments labelled "Menu" and "End Menu"
--->
-
 <html>
 
 <head>
 
 <meta charset="utf-8">
 
-<title>Navigation</title>
+<title>Preferences</title>
 
 <link href="styles.css" rel="stylesheet" type="text/css">
 
