Added ids for home & search preference areas

--- a/preferences.html
+++ b/preferences.html
@@ -214,11 +214,11 @@
     <div id="wrapper">
 
         <div id="homePref">
-
+            adsdasdasd
         </div>
 
         <div id="searchPref">
-
+            asdasdad
         </div>
 
     </div>
