Added titles to preferences boxes + slider test

--- a/preferences.html
+++ b/preferences.html
@@ -214,11 +214,18 @@
     <div id="wrapper">
 
         <div id="homePref">
-            adsdasdasd
+            <h3>Home Page Preferences</h3>
+            <form method="post" action="/action_page_post.php">
+                <label>Flip Switch:</label>
+                <label class="switch" for="checkbox">
+                    <input type="checkbox" id="checkbox">
+                    <div class="slider round"></div>
+                </label>
+            </form>
         </div>
 
         <div id="searchPref">
-            asdasdad
+            <h3>Search Preferences</h3>
         </div>
 
     </div>
