Added placeholder image for footer

--- a/preferences.html
+++ b/preferences.html
@@ -231,7 +231,7 @@
     </div>
 
     <footer>
-        
+        <img src="images/footerPlaceholder.png" width="1690px;">
     </footer>
 
 </body>
