Made preferences link in navigation actually link to preferences page

--- a/navigation.html
+++ b/navigation.html
@@ -178,7 +178,7 @@
             <li><a></a></li>
 
             <li>
-                <a href="#">Preferences</a>
+                <a href="preferences.html">Preferences</a>
             </li>
             <li>
                 <a href="#" class="noline">Account & Lists &#9662;</a>
