Removed scripts from head / linked scripts file

--- a/preferences.html
+++ b/preferences.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE HTML>
 
 <html>
@@ -11,32 +10,7 @@
 
 <link href="styles.css" rel="stylesheet" type="text/css">
 
-<script type="text/javascript">
-    function searchToggle(obj, evt){
-        var container = $(obj).closest('.search-wrapper');
-
-        if(!container.hasClass('active')){
-              container.addClass('active');
-              evt.preventDefault();
-        }
-        else if(container.hasClass('active') && $(obj).closest('.input-holder').length == 0){
-              container.removeClass('active');
-              // clear input
-              container.find('.search-input').val('');
-              // clear and hide result container when we press close
-              container.find('.result-container').fadeOut(100, function(){$(this).empty();});
-        }
-    }
-
-    function submitFn(obj, evt){
-        value = $(obj).find('.search-input').val().trim();
-
-        $(obj).find('.result-container').html('<span>' + _html + '</span>');
-        $(obj).find('.result-container').fadeIn(100);
-
-        evt.preventDefault();
-    }
-</script>
+<script type="text/javascript" src="script.js"></script>
 
 </head>
 
