Fixed missing 'a' in "Beauty & Personal Care"

--- a/navigation.html
+++ b/navigation.html
@@ -45,7 +45,7 @@
             <option value="">Arts, Crafts & Sewing</option>
             <option value="">Automotive Parts & Accessories</option>
             <option value="">Baby</option>
-            <option value="">Beauty & Personal Cre</option>
+            <option value="">Beauty & Personal Care</option>
             <option value="">Books</option>
             <option value="">CDs & Vinyl</option>
             <option value="">Cell Phones & Accessories</option>
